--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <!-- Sticky Header -->
     <header class="header">
         <div class="header-container">
-            <a href="https://royal-spark.github.io/Landing-Page/" style="text-decoration: none;">
+            <a href="https://royal-spark.github.io/Landing-Page/#tools" style="text-decoration: none;">
                 <div class="logo-container">
                     <img src="https://dwtymuzolmglgyejxuve.supabase.co/storage/v1/object/public/podcasts//Royal%20Spark%20D%20Logo%20-%20Mekvold%20V3.png" alt="Royal Spark Logo" style="height: 2.5rem; width: auto;">
                     <span style="font-size: 1.25rem; font-weight: 700; background: linear-gradient(to right, var(--primary-purple), var(--primary-cyan)); -webkit-background-clip: text; background-clip: text; color: transparent; margin-left: 0.5rem;">Royal Spark</span>
@@ -806,4 +806,5 @@
     </script>
 </body>
 </html>
+
 
