--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             background-color: var(--bg-dark);
             background-image: radial-gradient(ellipse at center, rgba(168, 85, 247, 0.1), transparent 70%);
             color: var(--text-primary);
-            padding-top: 2.5rem; /* Space for the sticky header (2rem height + 0.5rem gap) */
+            padding-top: 3rem; /* Space for the sticky header (2rem height + 1rem total vertical padding) */
             transition: background-color 0.3s, color 0.3s;
         }
 
@@ -52,7 +52,7 @@
             border-bottom: 1px solid var(--border-color);
             background-color: rgba(9, 9, 11, 0.8);
             backdrop-filter: blur(8px);
-            padding: 0 1rem;
+            padding: 1.8rem 1rem;
         }
         html[data-theme='light'] .header {
             background: rgba(255, 255, 255, 0.8);
@@ -61,7 +61,7 @@
             max-width: 1200px;
             margin: 0 auto;
             display: flex;
-            height: 2rem;
+            height: 0rem;
             align-items: center;
             justify-content: space-between;
         }
