--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeting Cost Calculator</title>
+    <title>USAF Personnel Hourly Cost Calculator</title>
     <!-- Tailwind CSS for layout -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts for typography -->
@@ -470,7 +470,7 @@
         <!-- Controls and Totals Section -->
         <div class="flex flex-col sm:flex-row items-center justify-between gap-4 mt-6">
             <div class="flex gap-4">
-                 <button id="add-row-btn" class="btn btn-primary">Add Attendee</button>
+                 <button id="add-row-btn" class="btn btn-primary">Add</button>
                  <button id="reset-btn" class="btn btn-secondary">Reset</button>
             </div>
             <div class="text-right">
@@ -1007,3 +1007,4 @@
 
 
 </body></html>
+
