--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     <div class="max-w-7xl mx-auto">
         <!-- Main Content Header -->
         <div class="mb-8 text-center">
-            <h1 class="text-3xl sm:text-4xl font-bold main-title">Meeting Cost Calculator</h1>
+            <h1 class="text-3xl sm:text-4xl font-bold main-title">USAF Personell Hourly Cost Calculator</h1>
             <p class="text-sm text-slate-400 mt-1">2025 Pay Scale with Updated OCONUS Allowances</p>
         </div>
 
@@ -1007,4 +1007,5 @@
 
 
 </body></html>
+
 
